[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9.0"
imgui = "0.8.2"
imgui-wgpu = "0.19.0"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
log = "0.4.14"
pixels = "0.9.0"
structopt = { version = "0.3.25", default-features = false }
winit = "0.26.0"
winit_input_helper = "0.11.0"
